--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
+build/
+Debug/
+out/
+x64/
+FirstLab.dir/
+
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+
 .vs/
+*.vcxproj*
+*.sln
+*.filters
+*.dir/
+
+!.gitignore
+!README.md
+!src/
+!src/*.cpp
+!src/*.h
+!CMakeLists.txt
